# youtube-analytics-project

./: pyproject.toml  settings.py
homework-3/: main.py
homework-5/: main.py
src/: channel.py  playlist.py  video.py
src/fixtures/: moscowpython.json
tests/: conftest.py  test_channel.py
